<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maxchehab.remotelinuxunlocker.PairingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pair_banner"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/pair_instructions"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <EditText
                android:layout_marginTop="30dp"
                android:id="@+id/ipInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pair_sample_ip"
                android:inputType="phone"
                tools:ignore="Autofill" />
            <Button
                android:id="@+id/pairButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pair"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonBack"
                    android:theme="@style/SuccessButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back" />

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
