<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maxchehab.remotelinuxunlocker.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_banner"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/settings_instructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/CardHolder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <com.maxchehab.remotelinuxunlocker.InfoRowView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:infoText="Controls whether unlocking this device will unlock devices that have their `UNLOCK` setting set. Note that the `UNLOCK` setting in the `MANAGE DEVICES` menu will not work if this is set to `OFF`.">
                <Switch
                    android:id="@+id/switchUnlockHook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/unlock_hook"/>
            </com.maxchehab.remotelinuxunlocker.InfoRowView>
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonBack"
                    android:theme="@style/SuccessButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/buttonCommit"
                    android:theme="@style/DangerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/commit" />

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>