<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maxchehab.remotelinuxunlocker.ComputerListActivity">


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:id="@+id/infoBar"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="bottom|center"
                android:text="@string/layout_banner"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/CardHolder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonManage"
                        style="@style/Widget.AppCompat.Button.Colored"                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/manage_devices" />

                    <Button
                        android:id="@+id/buttonHelp"
                        style="@style/Widget.AppCompat.Button.Colored"                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/help" />

                    <Button
                        android:id="@+id/buttonPair"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_device" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>
